[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/controls.gd" type="Script" id=1]
[ext_resource path="res://assets/touch_controls/up.png" type="Texture" id=2]
[ext_resource path="res://assets/touch_controls/down.png" type="Texture" id=3]
[ext_resource path="res://assets/touch_controls/rotate.png" type="Texture" id=4]
[ext_resource path="res://assets/touch_controls/fire.png" type="Texture" id=5]
[ext_resource path="res://assets/touch_controls/right.png" type="Texture" id=6]

[node name="CanvasLayer" type="CanvasLayer" index="0"]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Controls" type="Container" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="TouchButtonUp" type="TouchScreenButton" parent="Controls" index="0"]

position = Vector2( 6, 194 )
scale = Vector2( 0.375, 0.375 )
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "game_move_player_up"
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="TouchButtonDown" type="TouchScreenButton" parent="Controls" index="1"]

position = Vector2( 52, 194 )
scale = Vector2( 0.375, 0.375 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "game_move_player_down"
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="TouchButtonRotate" type="TouchScreenButton" parent="Controls" index="2"]

position = Vector2( 280, 200 )
scale = Vector2( 0.375, 0.375 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "game_rotate_block"
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="TouchButtonFire" type="TouchScreenButton" parent="Controls" index="3"]

position = Vector2( 320, 200 )
scale = Vector2( 0.375, 0.375 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "game_shoot_block"
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="TouchButtonRight" type="TouchScreenButton" parent="Controls" index="4"]

position = Vector2( 92, 192 )
scale = Vector2( 0.375, 0.375 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "game_move_player_right"
visibility_mode = 1
_sections_unfolded = [ "Transform" ]


